add map attribute to iterate list of dict and molecule test

--- a/ansible_collections/arista/avd/molecule/dhcp_provisioning/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/dhcp_provisioning/inventory/hosts.yml
@@ -47,6 +47,8 @@ all:
                   hosts:
                     DC1-L2LEAF1A:
                       ansible_host: 192.168.200.112
+            DC1_CUSTOM_L2LEAFS:
+              children:
                 DC1_L2LEAF2:
                   hosts:
                     DC1-L2LEAF2A:
