--- a/ansible_collections/arista/avd/molecule/dhcp_provisioning/inventory/group_vars/DC1_FABRIC.yml
+++ b/ansible_collections/arista/avd/molecule/dhcp_provisioning/inventory/group_vars/DC1_FABRIC.yml
@@ -149,6 +149,16 @@ l2leaf:
           mgmt_ip: 192.168.200.112/24
           mac_address: '0c:1d:c0:1d:62:21'
           l3leaf_interfaces: [ Ethernet7, Ethernet7 ]
+
+custom_l2leaf:
+  defaults:
+    platform: vEOS-LAB
+    parent_l3leafs: [ DC1-SVC3A, DC1-SVC3B ]
+    uplink_interfaces: [ Ethernet1, Ethernet2 ]
+    mlag_interfaces: [ Ethernet3, Ethernet4 ]
+    spanning_tree_mode: mstp
+    spanning_tree_priority: 16384
+  node_groups:
     - group: DC1_L2LEAF2
       nodes:
         - name: DC1-L2LEAF2A
@@ -175,3 +185,67 @@ bfd_multihop:
   interval: 1200
   min_rx: 1200
   multiplier: 3
+
+# Custom node types
+node_type_keys:
+
+  - key: spine
+    type: spine
+    default_evpn_role: server
+    default_ptp_priority1: 20
+
+  - key: l3leaf
+    type: l3leaf
+    connected_endpoints: true
+    default_evpn_role: client
+    default_ptp_priority1: 30
+    mlag_support: true
+    network_services:
+      l2: true
+      l3: true
+    vtep: true
+
+  - key: l2leaf
+    type: l2leaf
+    connected_endpoints: true
+    mlag_support: true
+    network_services:
+      l2: true
+    underlay_router: false
+    uplink_type: port-channel
+
+  - key: custom_l2leaf
+    type: customl_2leaf
+    connected_endpoints: true
+    mlag_support: true
+    network_services:
+      l2: true
+    underlay_router: false
+    uplink_type: port-channel
+
+  - key: super_spine
+    type: super-spine
+
+  - key: overlay_controller
+    type: overlay-controller
+    default_evpn_role: server
+
+  - key: wan_router
+    type: wan_router
+    default_evpn_role: client
+    default_wan_role: client
+    default_underlay_routing_protocol: none
+    default_overlay_routing_protocol: ibgp
+    network_services:
+      l3: true
+    vtep: true
+
+  - key: wan_rr
+    type: wan_rr
+    default_evpn_role: server
+    default_wan_role: server
+    default_underlay_routing_protocol: none
+    default_overlay_routing_protocol: ibgp
+    network_services:
+      l3: true
+    vtep: true
