--- a/ansible_collections/arista/avd/molecule/dhcp_configuration/intended/structured_configs/cvp/ztp_configuration.yml
+++ b/ansible_collections/arista/avd/molecule/dhcp_configuration/intended/structured_configs/cvp/ztp_configuration.yml
@@ -19,13 +19,14 @@ ztp:
         end: 172.17.255.210
         lease_time: 300
   clients:
+    # custom_l2leaf
+    - name: DC1-L2LEAF2B
+      mac: '0c:1d:c0:1d:62:22'
+      ip4: 192.168.200.114
     # l2leaf
     - name: DC1-L2LEAF1A
       mac: '0c:1d:c0:1d:62:01'
       ip4: 192.168.200.112
-    - name: DC1-L2LEAF2B
-      mac: '0c:1d:c0:1d:62:01'
-      ip4: 192.168.200.114
     # l3leaf
     - name: DC1-BL1A
       mac: '0c:1d:c0:1d:62:01'
