--- a/ansible_collections/arista/avd/molecule/dhcp_provisioning/inventory/group_vars/DC1_FABRIC.yml
+++ b/ansible_collections/arista/avd/molecule/dhcp_provisioning/inventory/group_vars/DC1_FABRIC.yml
@@ -215,7 +215,7 @@ node_type_keys:
     uplink_type: port-channel
 
   - key: custom_l2leaf
-    type: customl_2leaf
+    type: custom_l2leaf
     connected_endpoints: true
     mlag_support: true
     network_services:
