--- a/ansible_collections/arista/avd/molecule/dhcp_provisioning/inventory/group_vars/DC1_L2LEAFS.yml
+++ b/ansible_collections/arista/avd/molecule/dhcp_provisioning/inventory/group_vars/DC1_L2LEAFS.yml
@@ -1,1 +1,65 @@
 type: l2leaf
+
+# Custom node types with old syntax
+node_type_keys:
+
+  spine:
+    type: spine
+    default_evpn_role: server
+    default_ptp_priority1: 20
+
+  l3leaf:
+    type: l3leaf
+    connected_endpoints: true
+    default_evpn_role: client
+    default_ptp_priority1: 30
+    mlag_support: true
+    network_services:
+      l2: true
+      l3: true
+    vtep: true
+
+  l2leaf:
+    type: l2leaf
+    connected_endpoints: true
+    mlag_support: true
+    network_services:
+      l2: true
+    underlay_router: false
+    uplink_type: port-channel
+
+  custom_l2leaf:
+    type: custom_l2leaf
+    connected_endpoints: true
+    mlag_support: true
+    network_services:
+      l2: true
+    underlay_router: false
+    uplink_type: port-channel
+
+  super_spine:
+    type: super-spine
+
+  overlay_controller:
+    type: overlay-controller
+    default_evpn_role: server
+
+  wan_router:
+    type: wan_router
+    default_evpn_role: client
+    default_wan_role: client
+    default_underlay_routing_protocol: none
+    default_overlay_routing_protocol: ibgp
+    network_services:
+      l3: true
+    vtep: true
+
+  wan_rr:
+    type: wan_rr
+    default_evpn_role: server
+    default_wan_role: server
+    default_underlay_routing_protocol: none
+    default_overlay_routing_protocol: ibgp
+    network_services:
+      l3: true
+    vtep: true
