Moved compile, commit under control-functions.

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_general.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_general.schema.yml
@@ -80,3 +80,8 @@ keys:
                       return true;
                       }
                     EOF
+          compile:
+            type: bool
+            required: true
+          commit:
+            type: bool
