--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -12183,6 +12183,11 @@ keys:
                   description: "Content of route control function. Write 'EOF' below
                     the content.\ne.g.\nfunction ACCEPT_ALL() {\n  return true;\n
                     \ }\nEOF"
+          compile:
+            type: bool
+            required: true
+          commit:
+            type: bool
   router_igmp:
     type: dict
     display_name: Router IGMP Configuration
