Feat(eos_cli_config_gen): Option to set RCF address-family ipv4, ipv6 and evpn

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-v4-v6-evpn.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-v4-v6-evpn.cfg
@@ -89,12 +89,16 @@ router bgp 65100
       neighbor EVPN-OVERLAY route-map RM-HIDE-AS-PATH in
       neighbor EVPN-OVERLAY route-map RM-HIDE-AS-PATH out
       neighbor EVPN-OVERLAY activate
+      neighbor RCF_TEST rcf in Address-Family_EVPN_In()
+      neighbor RCF_TEST rcf out Address-Family_EVPN_Out()
    !
    address-family ipv4
       neighbor IPV4-UNDERLAY route-map RM-HIDE-AS-PATH in
       neighbor IPV4-UNDERLAY route-map RM-HIDE-AS-PATH out
       neighbor IPV4-UNDERLAY activate
       neighbor IPV4-UNDERLAY-MLAG activate
+      neighbor TEST_RCF rcf in Address-Family_IPV4_In()
+      neighbor TEST_RCF rcf out Address-Family_IPV4_Out()
    !
    address-family ipv4 multicast
       neighbor IPV4-UNDERLAY activate
@@ -106,6 +110,8 @@ router bgp 65100
       neighbor IPV6-UNDERLAY route-map RM-HIDE-AS-PATH out
       neighbor IPV6-UNDERLAY activate
       neighbor IPV6-UNDERLAY-MLAG activate
+      neighbor TEST_RCF rcf in Address-Family_IPV6_in()
+      neighbor TEST_RCF rcf out Address-Family_IPV6_out()
    !
    vrf Tenant_A
       rd 10.50.64.15:30001
