--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-base.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-base.yml
@@ -97,6 +97,15 @@ router_bgp:
       - ip_address: 192.0.2.1
         prefix_list_in: PL-FOO-v4-IN
         prefix_list_out: PL-FOO-v4-OUT
+      - ip_address: 10.2.3.8
+        rcf_out: Address-Family_IPV4_In
+      - ip_address: 10.2.3.9
+        rcf_out: Address-Family_IPV4_Out
+    redistribute_routes:
+      - source_protocol: connected
+        rcf: Address-Family_IPV4_Connected
+      - source_protocol: static
+        rcf: Address-Family_IPV4_Static
   address_family_ipv6:
     networks:
       - prefix: 2001:db8:100::/40
@@ -110,6 +119,9 @@ router_bgp:
       - ip_address: 2001:db8::1
         prefix_list_in: PL-FOO-v6-IN
         prefix_list_out: PL-FOO-v6-OUT
+      - ip_address: 2001:db8::2
+        rcf_in: Address-Family_IPV6_in
+        rcf_out: Address-Family_IPV6_out
     redistribute_routes:
       - source_protocol: static
         route_map: RM-IPV6-STATIC-TO-BGP
@@ -119,6 +131,8 @@ router_bgp:
         route_map: RM-REDISTRIBUTE-BGP
         # this should not do anything as leaked is generated when source protocol is bgp
         include_leaked: true
+      - source_protocol: connected
+        rcf: Address-Family_IPV6_Connected
   neighbors:
     - ip_address: 192.0.3.1
       remote_as: 65432
