--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -959,6 +959,12 @@ keys:
                 route_map_out:
                   type: str
                   description: Outbound route-map name.
+                rcf_in:
+                  type: str
+                  description: Inbound rcf function name without parentheses
+                rcf_out:
+                  type: str
+                  description: Outbound rcf function name without parentheses
                 domain_remote:
                   type: bool
                 encapsulation:
@@ -1133,6 +1139,12 @@ keys:
                 route_map_out:
                   type: str
                   description: Outbound route-map name.
+                rcf_in:
+                  type: str
+                  description: Inbound rcf function name without parentheses.
+                rcf_out:
+                  type: str
+                  description: Outbound rcf function name without parentheses.
                 default_originate:
                   type: dict
                   keys:
@@ -1183,6 +1195,12 @@ keys:
                 route_map_out:
                   type: str
                   description: Outbound route-map name.
+                rcf_in:
+                  type: str
+                  description: Inbound rcf function name without parentheses.
+                rcf_out:
+                  type: str
+                  description: Outbound rcf function name without parentheses.
                 prefix_list_in:
                   type: str
                   description: Inbound prefix-list name.
@@ -1196,6 +1214,21 @@ keys:
                       type: bool
                     route_map:
                       type: str
+          redistribute_routes:
+            type: list
+            primary_key: source_protocol
+            convert_types:
+              - dict
+            items:
+              type: dict
+              keys:
+                source_protocol:
+                  type: str
+                include_leaked:
+                  type: bool
+                rcf:
+                  type: str
+                  description: RCF function name without parentheses.
       address_family_ipv4_multicast:
         type: dict
         keys:
@@ -1320,6 +1353,12 @@ keys:
                 route_map_out:
                   type: str
                   description: Outbound route-map name.
+                rcf_in:
+                  type: str
+                  description: Inbound rcf function name without parentheses.
+                rcf_out:
+                  type: str
+                  description: Outbound rcf function name without parentheses.
                 prefix_list_in:
                   type: str
                   description: Inbound prefix-list name.
@@ -1344,6 +1383,12 @@ keys:
                 route_map_out:
                   type: str
                   description: Outbound route-map name.
+                rcf_in:
+                  type: str
+                  description: Inbound rcf function name without parentheses.
+                rcf_out:
+                  type: str
+                  description: Outbound rcf function name without parentheses.
                 prefix_list_in:
                   type: str
                   description: Inbound prefix-list name.
@@ -1364,6 +1409,9 @@ keys:
                   type: str
                 include_leaked:
                   type: bool
+                rcf:
+                  type: str
+                  description: RCF function name without parentheses.
       address_family_ipv6_multicast:
         type: dict
         keys:
