--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-base.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-base.cfg
@@ -97,7 +97,7 @@ router bgp 65101
       neighbor foo prefix-list PL-BAR-v4-IN in
       neighbor foo prefix-list PL-BAR-v4-OUT out
       neighbor foo default-originate route-map RM-FOO-MATCH always
-      neighbor 10.2.3.8 rcf out Address-Family_IPV4_In()
+      neighbor 10.2.3.8 rcf in Address-Family_IPV4_In()
       neighbor 10.2.3.9 rcf out Address-Family_IPV4_Out()
       neighbor 192.0.2.1 prefix-list PL-FOO-v4-IN in
       neighbor 192.0.2.1 prefix-list PL-FOO-v4-OUT out
