--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -97,8 +97,6 @@ all:
               hosts:
                 UPLINK-MLAG-STRUCTURED-CONFIG-L2LEAF1A:
                 UPLINK-MLAG-STRUCTURED-CONFIG-L2LEAF1B:
-                TEST-MGMT-GATEWAY-IN-NODE-GROUP-NODES:
-                TEST-MGMT-GATEWAY-IN-NODE-GROUP1:
         UNDERLAY_MULTICAST_TESTS:
           children:
             UNDERLAY_MULTICAST_SPINES:
@@ -297,6 +295,12 @@ all:
             inband-mgmt-parent-ipv6-2:
             inband-mgmt-ipv6-only:
             inband-mgmt-ipv6-only-vrf:
+        MGMT_GATEWAY_TESTS:
+          hosts:
+            MGMT-GATEWAY-IN-NODE-GROUP-NODES:
+            MGMT-GATEWAY-IN-NODE-GROUP:
+            IPV6-MGMT-GATEWAY-IN-NODE-GROUP-NODES:
+            IPV6-MGMT-GATEWAY-IN-NODE-GROUP:
         WAN_TESTS:
           children:
             AUTOVPN_TESTS:
