--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/UPLINK-MLAG-STRUCTURED-CONFIG-L3LEAF1B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/UPLINK-MLAG-STRUCTURED-CONFIG-L3LEAF1B.yml
@@ -128,19 +128,6 @@ port_channel_interfaces:
   trunk_groups:
   - LEAF_PEER_L3
   - MLAG
-- name: Port-Channel4
-  description: TEST-MGMT-GATEWAY-IN-NODE-GROUP_Po1
-  type: switched
-  shutdown: false
-  mode: trunk
-  vlans: none
-  mlag: 4
-  storm_control:
-    broadcast:
-      level: '25'
-    unknown_unicast:
-      level: '25'
-  native_vlan_tag: true
 - name: Port-Channel5
   description: UPLINK-MLAG-STRUCTURED-CONFIG-L2LEAF1_Po1
   type: switched
@@ -156,24 +143,24 @@ port_channel_interfaces:
   native_vlan_tag: true
 ethernet_interfaces:
 - name: Ethernet3
-  peer: TEST-MGMT-GATEWAY-IN-NODE-GROUP1
-  peer_interface: Ethernet2
-  peer_type: l2leaf
-  description: TEST-MGMT-GATEWAY-IN-NODE-GROUP1_Ethernet2
+  peer: UPLINK-MLAG-STRUCTURED-CONFIG-L3LEAF1A
+  peer_interface: Ethernet3
+  peer_type: mlag_peer
+  description: MLAG_PEER_UPLINK-MLAG-STRUCTURED-CONFIG-L3LEAF1A_Ethernet3
   type: port-channel-member
   shutdown: false
   channel_group:
-    id: 4
+    id: 3
     mode: active
 - name: Ethernet4
-  peer: TEST-MGMT-GATEWAY-IN-NODE-GROUP-NODES
-  peer_interface: Ethernet2
-  peer_type: l2leaf
-  description: TEST-MGMT-GATEWAY-IN-NODE-GROUP-NODES_Ethernet2
+  peer: UPLINK-MLAG-STRUCTURED-CONFIG-L3LEAF1A
+  peer_interface: Ethernet4
+  peer_type: mlag_peer
+  description: MLAG_PEER_UPLINK-MLAG-STRUCTURED-CONFIG-L3LEAF1A_Ethernet4
   type: port-channel-member
   shutdown: false
   channel_group:
-    id: 4
+    id: 3
     mode: active
 - name: Ethernet1
   peer: UPLINK-MLAG-STRUCTURED-CONFIG-SPINE1
