Doc: Add description for include / excude lists

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -2856,6 +2856,8 @@ keys:
                   exclude:
                     type: list
                     primary_key: source
+                    description: The same source must not be present both in `exclude`
+                      and `include` list.
                     items:
                       type: dict
                       keys:
@@ -2864,6 +2866,8 @@ keys:
                   include:
                     type: list
                     primary_key: source
+                    description: The same source must not be present both in `exclude`
+                      and `include` list.
                     items:
                       type: dict
                       keys:
@@ -8108,6 +8112,8 @@ keys:
                   exclude:
                     type: list
                     primary_key: source
+                    description: The same source must not be present both in `exclude`
+                      and `include` list.
                     items:
                       type: dict
                       keys:
@@ -8116,6 +8122,8 @@ keys:
                   include:
                     type: list
                     primary_key: source
+                    description: The same source must not be present both in `exclude`
+                      and `include` list.
                     items:
                       type: dict
                       keys:
@@ -15235,6 +15243,8 @@ keys:
                   exclude:
                     type: list
                     primary_key: source
+                    description: The same source must not be present both in `exclude`
+                      and `include` list.
                     items:
                       type: dict
                       keys:
@@ -15243,6 +15253,8 @@ keys:
                   include:
                     type: list
                     primary_key: source
+                    description: The same source must not be present both in `exclude`
+                      and `include` list.
                     items:
                       type: dict
                       keys:
