--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ethernet_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ethernet_interfaces.schema.yml
@@ -1033,6 +1033,7 @@ keys:
                   exclude:
                     type: list
                     primary_key: source
+                    description: The same source must not be present both in `exclude` and `include` list.
                     items:
                       type: dict
                       keys:
@@ -1041,6 +1042,7 @@ keys:
                   include:
                     type: list
                     primary_key: source
+                    description: The same source must not be present both in `exclude` and `include` list.
                     items:
                       type: dict
                       keys:
