--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -12112,6 +12112,10 @@ keys:
               - str
               min: 1
               max: 3600
+      eos_cli:
+        type: str
+        description: Multiline EOS CLI rendered directly on the Router BGP in the
+          final EOS configuration.
   router_general:
     type: dict
     display_name: Router General configuration
