--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -2685,3 +2685,7 @@ keys:
                 - str
               min: 1
               max: 3600
+      eos_cli:
+        type: str
+        description: |-
+          Multiline EOS CLI rendered directly on the Router BGP in the final EOS configuration.
