--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/vlan_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/vlan_interfaces.schema.yml
@@ -89,6 +89,61 @@ keys:
             - str
           min: 1
           max: 3
+        ip_igmp_host_proxy:
+          type: dict
+          keys:
+            enabled:
+              type: bool
+            groups:
+              type: list
+              primary_key: group
+              items:
+                type: dict
+                keys:
+                  group:
+                    type: str
+                    description: Multicast Address.
+                  exclude:
+                    type: list
+                    primary_key: source
+                    description: The same source must not be present both in `exclude` and `include` list.
+                    items:
+                      type: dict
+                      keys:
+                        source:
+                          type: str
+                  include:
+                    type: list
+                    primary_key: source
+                    description: The same source must not be present both in `exclude` and `include` list.
+                    items:
+                      type: dict
+                      keys:
+                        source:
+                          type: str
+            report_interval:
+              type: int
+              convert_types:
+                - str
+              min: 1
+              max: 31744
+              description: Time interval between unsolicited reports.
+            access_lists:
+              type: list
+              primary_key: name
+              description: Non-standard Access List name.
+              items:
+                type: dict
+                keys:
+                  name:
+                    type: str
+            version:
+              type: int
+              convert_types:
+                - str
+              min: 1
+              max: 3
+              description: IGMP version on IGMP host-proxy interface.
         ip_helpers:
           type: list
           description: List of DHCP servers
