--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -3226,7 +3226,7 @@ keys:
                   keys:
                     mpls:
                       type: bool
-                      description: Export MPLS forwarding information
+                      description: Export MPLS forwarding information.
       hardware:
         type: dict
         $ref: eos_cli_config_gen#/$defs/flow_tracking
@@ -3236,6 +3236,7 @@ keys:
             keys:
               format_ipfix_standard_timestamps_counters:
                 type: bool
+                description: Enable software export of IPFIX data records.
   flow_trackings:
     documentation_options:
       table: flow-tracking
