--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/network-ports-tests-2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/network-ports-tests-2.cfg
@@ -54,6 +54,12 @@ interface Port-Channel43
    switchport
    mlag 43
 !
+interface Port-Channel44
+   description Checking monitor sessions on port-channels
+   no shutdown
+   switchport
+   mlag 44
+!
 interface Port-Channel101
    description MLAG_PEER_network-ports-tests.1_Po101
    no shutdown
@@ -564,6 +570,26 @@ interface Ethernet12
    switchport mode trunk phone
    switchport
 !
+interface Ethernet14
+   description Checking monitor sessions on single interface
+   no shutdown
+   switchport
+!
+interface Ethernet15
+   description Checking monitor sessions on port-channels
+   no shutdown
+   channel-group 44 mode active
+!
+interface Ethernet16
+   description Checking monitor sessions on port-channels
+   no shutdown
+   channel-group 44 mode active
+!
+interface Ethernet17
+   description monitor sessions destination
+   no shutdown
+   switchport
+!
 interface Ethernet51
    no shutdown
    channel-group 43 mode active
@@ -579,6 +605,12 @@ interface Vlan4094
    no autostate
    ip address 10.255.252.1/31
 no ip routing vrf MGMT
+!
+monitor session DMF source Ethernet14 both
+monitor session DMF source Port-Channel44 both
+monitor session DMF source Port-Channel44 both
+monitor session DMF destination Ethernet17
+monitor session DMF encapsulation gre metadata tx
 !
 mlag configuration
    domain-id mlag
