--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-base.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-base.cfg
@@ -91,7 +91,9 @@ router bgp 65101
    aggregate-address 1.12.1.0/24 as-set advertise-map ADV-MAP supress-map SUP-MAP summary-only attribute-map RM-ATTRIBUTE match-map RM-MATCH advertise-only
    aggregate-address 2.2.1.0/24
    redistribute bgp leaked route-map RM-REDISTRIBUTE-BGP
+   redistribute connected rcf Router_BGP_Connected()
    redistribute ospf include leaked
+   redistribute static rcf Router_BGP_Static()
    !
    address-family ipv4
       neighbor foo prefix-list PL-BAR-v4-IN in
