--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -648,6 +648,9 @@ keys:
               type: str
             route_map:
               type: str
+            rcf:
+              type: str
+              description: RCF function name without parenthesis.
             include_leaked:
               type: bool
       vlan_aware_bundles:
@@ -1755,6 +1758,12 @@ keys:
                 route_map_out:
                   type: str
                   description: Outbound route-map name
+                rcf_in:
+                  type: str
+                  description: Inbound rcf function name without parenthesis.
+                rcf_out:
+                  type: str
+                  description: Outbound rcf function name without parenthesis.
           route:
             type: dict
             keys:
@@ -1780,11 +1789,32 @@ keys:
                 route_map_out:
                   type: str
                   description: Outbound route-map name
+                rcf_in:
+                  type: str
+                  description: Inbound rcf function name without parenthesis.
+                rcf_out:
+                  type: str
+                  description: Outbound rcf function name without parenthesis.
           neighbor_default_encapsulation_mpls_next_hop_self:
             type: dict
             keys:
               source_interface:
                 type: str
+          redistribute_routes:
+            type: list
+            primary_key: source_protocol
+            convert_types:
+              - dict
+            items:
+              type: dict
+              keys:
+                source_protocol:
+                  type: str
+                include_leaked:
+                  type: bool
+                rcf:
+                  type: str
+                  description: RCF function name without parenthesis.
       address_family_vpn_ipv6:
         type: dict
         keys:
@@ -1809,6 +1839,12 @@ keys:
                 route_map_out:
                   type: str
                   description: Outbound route-map name
+                rcf_in:
+                  type: str
+                  description: Inbound rcf function name without parenthesis.
+                rcf_out:
+                  type: str
+                  description: Outbound rcf function name without parenthesis.
           route:
             type: dict
             keys:
@@ -1834,11 +1870,32 @@ keys:
                 route_map_out:
                   type: str
                   description: Outbound route-map name
+                rcf_in:
+                  type: str
+                  description: Inbound rcf function name without parenthesis.
+                rcf_out:
+                  type: str
+                  description: Outbound rcf function name without parenthesis.
           neighbor_default_encapsulation_mpls_next_hop_self:
             type: dict
             keys:
               source_interface:
                 type: str
+          redistribute_routes:
+            type: list
+            primary_key: source_protocol
+            convert_types:
+              - dict
+            items:
+              type: dict
+              keys:
+                source_protocol:
+                  type: str
+                include_leaked:
+                  type: bool
+                rcf:
+                  type: str
+                  description: RCF function name without parenthesis.
       vrfs:
         type: list
         primary_key: name
