--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -10882,6 +10882,12 @@ keys:
                   type: str
                 activate:
                   type: bool
+                rcf_in:
+                  type: str
+                  description: Inbound rcf function name without parenthesis.
+                rcf_out:
+                  type: str
+                  description: Outbound rcf function name without parenthesis.
           peer_groups:
             type: list
             primary_key: name
@@ -10903,10 +10909,10 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: Inbound rcf function name without parentheses
+                  description: Inbound rcf function name without parenthesis.
                 rcf_out:
                   type: str
-                  description: Outbound rcf function name without parentheses
+                  description: Outbound rcf function name without parenthesis.
                 domain_remote:
                   type: bool
                 encapsulation:
@@ -11084,10 +11090,10 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: Inbound rcf function name without parentheses.
+                  description: Inbound rcf function name without parenthesis.
                 rcf_out:
                   type: str
-                  description: Outbound rcf function name without parentheses.
+                  description: Outbound rcf function name without parenthesis.
                 default_originate:
                   type: dict
                   keys:
@@ -11140,10 +11146,10 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: Inbound rcf function name without parentheses.
+                  description: Inbound rcf function name without parenthesis.
                 rcf_out:
                   type: str
-                  description: Outbound rcf function name without parentheses.
+                  description: Outbound rcf function name without parenthesis.
                 prefix_list_in:
                   type: str
                   description: Inbound prefix-list name.
@@ -11171,7 +11177,7 @@ keys:
                   type: bool
                 rcf:
                   type: str
-                  description: RCF function name without parentheses.
+                  description: RCF function name without parenthesis.
       address_family_ipv4_multicast:
         type: dict
         keys:
@@ -11298,10 +11304,10 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: Inbound rcf function name without parentheses.
+                  description: Inbound rcf function name without parenthesis.
                 rcf_out:
                   type: str
-                  description: Outbound rcf function name without parentheses.
+                  description: Outbound rcf function name without parenthesis.
                 prefix_list_in:
                   type: str
                   description: Inbound prefix-list name.
@@ -11328,10 +11334,10 @@ keys:
                   description: Outbound route-map name.
                 rcf_in:
                   type: str
-                  description: Inbound rcf function name without parentheses.
+                  description: Inbound rcf function name without parenthesis.
                 rcf_out:
                   type: str
-                  description: Outbound rcf function name without parentheses.
+                  description: Outbound rcf function name without parenthesis.
                 prefix_list_in:
                   type: str
                   description: Inbound prefix-list name.
@@ -11354,7 +11360,7 @@ keys:
                   type: bool
                 rcf:
                   type: str
-                  description: RCF function name without parentheses.
+                  description: RCF function name without parenthesis.
       address_family_ipv6_multicast:
         type: dict
         keys:
