--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-evpn-mpls.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-evpn-mpls.cfg
@@ -40,5 +40,7 @@ router bgp 65101
       next-hop mpls resolution ribs tunnel-rib-colored system-colored-tunnel-rib tunnel-rib test-rib system-connected
       neighbor EVPN-OVERLAY-PEERS activate
       neighbor 192.168.255.3 activate
+      neighbor 192.168.255.4 rcf in Address_Family_EVPN_In()
+      neighbor 192.168.255.4 rcf out Address_Family_EVPN_Out()
 !
 end
