Feat(eos_cli_config_gen): add hardware flow tracking standard record format support (#3681)
Co-authored-by: Guillaume Mulocher <gmulocher@arista.com>
Co-authored-by: Carl Buchmann <carl.buchmann@arista.com>

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/flow-tracking.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/flow-tracking.yml
@@ -92,7 +92,8 @@ flow_tracking:
             collector:
               host: dead:beef::cafe
     shutdown: false
-
+    record:
+      format_ipfix_standard_timestamps_counters: true
 ethernet_interfaces:
   - name: Ethernet40
     flow_tracker:
