--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/flow_tracking.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/flow_tracking.schema.yml
@@ -61,7 +61,14 @@ keys:
                   keys:
                     mpls:
                       type: bool
-                      description: Export MPLS forwarding information
+                      description: Export MPLS forwarding information.
       hardware:
         type: dict
         $ref: "eos_cli_config_gen#/$defs/flow_tracking"
+        keys:
+          record:
+            type: dict
+            keys:
+              format_ipfix_standard_timestamps_counters:
+                type: bool
+                description: Enable software export of IPFIX data records.
