Feat(eos_cli_config_gen): Option to set RCF route bgp ipv4/ipv6 mulit-cast and VRF

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-v4-v6-evpn.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-v4-v6-evpn.yml
@@ -93,6 +93,8 @@ router_bgp:
         activate: true
     redistribute_routes:
       - source_protocol: attached-host
+      - source_protocol: isis
+        rcf: Router_BGP_Isis
   address_family_ipv6:
     peer_groups:
       - name: IPV6-UNDERLAY
