--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -10993,6 +10993,9 @@ keys:
                   type: str
                 route_map:
                   type: str
+                rcf:
+                  type: str
+                  description: RCF function name without parenthesis.
       address_family_ipv4_sr_te:
         type: dict
         keys:
@@ -11179,6 +11182,21 @@ keys:
                   description: IPv6 prefix "A:B:C:D:E:F:G:H/I"
                 route_map:
                   type: str
+          redistribute_routes:
+            type: list
+            primary_key: source_protocol
+            convert_types:
+            - dict
+            items:
+              type: dict
+              keys:
+                source_protocol:
+                  type: str
+                include_leaked:
+                  type: bool
+                rcf:
+                  type: str
+                  description: RCF function name without parenthesis.
       address_family_ipv6_sr_te:
         type: dict
         keys:
@@ -11668,6 +11686,9 @@ keys:
                           type: str
                       route_map:
                         type: str
+                      rcf:
+                        type: str
+                        description: RCF function name without parenthesis.
                 export:
                   type: list
                   primary_key: address_family
@@ -11685,6 +11706,9 @@ keys:
                           type: str
                       route_map:
                         type: str
+                      rcf:
+                        type: str
+                        description: RCF function name without parenthesis.
             router_id:
               description: in IP address format A.B.C.D
               type: str
@@ -11994,6 +12018,9 @@ keys:
                     type: str
                   include_leaked:
                     type: bool
+                  rcf:
+                    type: str
+                    description: RCF function name without parenthesis.
             aggregate_addresses:
               type: list
               primary_key: prefix
