CI: Fix ansible-lint issues

--- a/ansible_collections/arista/avd/molecule/dhcp_provisioning/converge.yml
+++ b/ansible_collections/arista/avd/molecule/dhcp_provisioning/converge.yml
@@ -15,10 +15,11 @@
   gather_facts: false
   connection: local
   tasks:
-    - name: rename the dhcp config file
+    - name: Rename the dhcp config file
       ansible.builtin.shell: |
         mv -f ./intended/configs/dhcpd.conf ./intended/configs/dhcpd_default_nodes.conf
         mv -f ./intended/structured_configs/cvp/ztp_configuration.yml ./intended/structured_configs/cvp/ztp_configuration_default_nodes.yml
+      changed_when: true
 
 - name: Converge - generate DHCP configuration offline for custom node types with 3.x syntax using a dict of dicts
   hosts: TOOLS
@@ -36,10 +37,11 @@
   gather_facts: false
   connection: local
   tasks:
-    - name: rename the dhcp config file
+    - name: Rename the dhcp config file
       ansible.builtin.shell: |
         mv -f ./intended/configs/dhcpd.conf ./intended/configs/dhcpd_custom_nodes_3x_syntax.conf
         mv -f ./intended/structured_configs/cvp/ztp_configuration.yml ./intended/structured_configs/cvp/ztp_configuration_custom_nodes_3x_syntax.yml
+      changed_when: true
 
 - name: Converge - generate DHCP configuration offline for custom node types with 4.x syntax using a list of dicts
   hosts: TOOLS
@@ -57,7 +59,8 @@
   gather_facts: false
   connection: local
   tasks:
-    - name: rename the dhcp config file
+    - name: Rename the dhcp config file
       ansible.builtin.shell: |
         mv -f ./intended/configs/dhcpd.conf ./intended/configs/dhcpd_custom_nodes_4x_syntax.conf
         mv -f ./intended/structured_configs/cvp/ztp_configuration.yml ./intended/structured_configs/cvp/ztp_configuration_custom_nodes_4x_syntax.yml
+      changed_when: true
